--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,3 +3,12 @@
 
 @import "{{ site.theme }}";
 # Put my CSS code here ("immediately after the import line")
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Hello</title>
+</head>
+<body>
+  <h1>Hello</h1> 
+</body>
+</html>
